objects/BMCServiceDesk__BMC_UPS__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Battery_Installed__c</fullName>
        <label>Battery Installed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Input_Voltage__c</fullName>
        <label>Input Voltage</label>
        <picklist>
            <picklistValues>
                <fullName>Range 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Range 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neither</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_Switching_Supply__c</fullName>
        <label>Is Switching Supply</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Time_On_Backup__c</fullName>
        <label>Time On Backup</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Total_Output_Power__c</fullName>
        <label>Total Output Power</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Type_Of_Range_Switching__c</fullName>
        <label>Type Of Range Switching</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoswitch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wide Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UPS_Port__c</fullName>
        <label>UPS Port</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>